[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Born2bSportyV2.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/UI/MainMenu.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 102
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 60
font_data = ExtResource( 1 )

[node name="MainMenu" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false,
"_edit_vertical_guides_": [ 433.852 ]
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0.262745, 0.235294, 0.235294, 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 1280.0
margin_bottom = 720.0
custom_constants/separation = 65
alignment = 1

[node name="TitleContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 214.0
margin_right = 1280.0
margin_bottom = 317.0
size_flags_horizontal = 3

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer/TitleContainer"]
margin_left = 338.0
margin_right = 941.0
margin_bottom = 103.0
custom_fonts/font = SubResource( 1 )
text = "Dungeon Walker"
align = 1
valign = 1

[node name="GeneratorControls" type="CenterContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 382.0
margin_right = 1280.0
margin_bottom = 506.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/GeneratorControls"]
margin_left = 560.0
margin_right = 720.0
margin_bottom = 124.0

[node name="StartButton" type="MarginContainer" parent="MarginContainer/VBoxContainer/GeneratorControls/VBoxContainer"]
margin_right = 160.0
margin_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 160, 0 )
size_flags_horizontal = 0

[node name="StartButton" type="HBoxContainer" parent="MarginContainer/VBoxContainer/GeneratorControls/VBoxContainer/StartButton"]
margin_right = 160.0
margin_bottom = 60.0
custom_constants/separation = 5

[node name="Marker" type="Label" parent="MarginContainer/VBoxContainer/GeneratorControls/VBoxContainer/StartButton/StartButton"]
margin_right = 30.0
margin_bottom = 60.0
rect_min_size = Vector2( 30, 0 )
custom_fonts/font = SubResource( 2 )
text = ">"

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/GeneratorControls/VBoxContainer/StartButton/StartButton"]
margin_left = 35.0
margin_right = 151.0
margin_bottom = 60.0
rect_min_size = Vector2( 10, 0 )
custom_fonts/font = SubResource( 2 )
text = "Start"

[node name="ExitButton" type="MarginContainer" parent="MarginContainer/VBoxContainer/GeneratorControls/VBoxContainer"]
margin_top = 64.0
margin_right = 160.0
margin_bottom = 124.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 160, 0 )
size_flags_horizontal = 4

[node name="ExitButton" type="HBoxContainer" parent="MarginContainer/VBoxContainer/GeneratorControls/VBoxContainer/ExitButton"]
margin_right = 160.0
margin_bottom = 60.0
custom_constants/separation = 5

[node name="Marker" type="Label" parent="MarginContainer/VBoxContainer/GeneratorControls/VBoxContainer/ExitButton/ExitButton"]
margin_right = 30.0
margin_bottom = 60.0
rect_min_size = Vector2( 30, 0 )
custom_fonts/font = SubResource( 2 )
text = ">"

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/GeneratorControls/VBoxContainer/ExitButton/ExitButton"]
margin_left = 35.0
margin_right = 117.0
margin_bottom = 60.0
rect_min_size = Vector2( 10, 0 )
custom_fonts/font = SubResource( 2 )
text = "Exit"
